@@ -45,6 +45,7 @@ extern "C" {
 /* Name mangling */
 #define chacha_set_key nettle_chacha_set_key
 #define chacha_set_nonce nettle_chacha_set_nonce
+#define chacha_set_nonce96 nettle_chacha_set_nonce96
 #define chacha_crypt nettle_chacha_crypt
 #define _chacha_core _nettle_chacha_core
 
@@ -52,6 +53,7 @@ extern "C" {
 #define CHACHA_KEY_SIZE 32
 #define CHACHA_BLOCK_SIZE 64
 #define CHACHA_NONCE_SIZE 8
+#define CHACHA_NONCE96_SIZE 12
 
 #define _CHACHA_STATE_LENGTH 16
 
@@ -76,6 +78,9 @@ chacha_set_key(struct chacha_ctx *ctx, const uint8_t *key);
 
 void
 chacha_set_nonce(struct chacha_ctx *ctx, const uint8_t *nonce);
+
+void
+chacha_set_nonce96(struct chacha_ctx *ctx, const uint8_t *nonce);
 
 void
 chacha_crypt(struct chacha_ctx *ctx, size_t length, 
